--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
   <string name="action_close">Close</string>
   <string name="Star_unstar">Star/Unstar</string>
   <string name="Watch_unwatch">Watch/Unwatch</string>
+  <string name="radio_repository">Repository</string>
+  <string name="radio_user">User</string>
+  <string name="radio_issue">Issue</string>
+  <string name="radio_owner">Owner</string>
 </resources>
